--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,10 @@ description: Flutter Yandex SmartCaptcha
 version: 0.0.1
 homepage: https://github.com/postflow/flutterYandexSmartCaptcha
 
+platforms:
+  android:
+  ios:
+
 environment:
   sdk: '>=3.0.1 <4.0.0'
   flutter: ">=1.17.0"
